# a-maze-ing

./: .flake8  .gitignore  README.md  a_maze_ing.py  config.example  config.txt  pyproject.toml  requirements.txt
.github/workflows/: CI.yaml
maze/: perfect_maze_generator.py
src/: a_maze_ing.py
src/enums/: __init__.py  config_keys.py
src/maze/: __init__.py  cell.py  imperfect_maze_generator.py  maze_generator.py
src/utils/: __init__.py  config.py  load_config.py  point.py
tests/configs_tests/: 3lines_config.txt  5lines_config.txt  6lines_config.txt  config_test.py
