[project]
name = "a-maze-ing"
version = "0.1.0"
description = "Maze generator"
authors = [
    {name = "Anthony MARIE-CALIXTE",email = "anthonym.calixte@gmail.com"},
    {name = "Dimitri CHAUVEL",email = "chauvel.dimitri@posteo.net"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=2.3.0,<3.0.0)",
    "ruff (>=0.15.22,<0.16.0)"
]
